<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.switcherac</groupId>
	<artifactId>switcher-ac</artifactId>
	<version>1.0.8-SNAPSHOT</version>
	
	<name>Switcher Account Control</name>
	<description>Account Control Service for Switcher API</description>
	<url>https://github.com/switcherapi/switcher-ac</url>
	
	<developers>
		<developer>
			<name>Roger Floriano</name>
			<email>switcher.project@gmail.com</email>
			<url>https://github.com/petruki</url>
			<roles>
				<role>Lead developer</role>
			</roles>
		</developer>
 	</developers>

	<organization>
		<name>switcherapi</name>
		<url>https://github.com/switcherapi</url>
	</organization>
 	
    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://github.com/switcherapi/switcher-ac/actions</url>
    </ciManagement>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://github.com/switcherapi/switcher-ac/blob/master/LICENSE</url>
		</license>
	</licenses>
 	
	<scm>
		<connection>scm:git:git://github.com:switcherapi/switcher-ac.git</connection>
		<developerConnection>scm:git:ssh://github.com:switcherapi/switcher-ac.git</developerConnection>
		<url>https://github.com/switcherapi/switcher-ac</url>
	</scm>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.7</version>
		<relativePath>..</relativePath>
	</parent>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
    	<maven.compiler.target>${java.version}</maven.compiler.target>
		
		<jersey.version>3.1.2</jersey.version>
		<switcher-client.version>2.0.2</switcher-client.version>
		<jsonwebtoken.version>0.11.5</jsonwebtoken.version>
		<joda-time.version>2.12.5</joda-time.version>
		<gson.version>2.10.1</gson.version>
		<springdoc.version>2.1.0</springdoc.version>

		<!-- Test-->
		<flapdoodle.embed.mongo.version>4.6.2</flapdoodle.embed.mongo.version>
		
		<!-- Managed -->
		<spring-expression.version>6.0.8</spring-expression.version>
		<snakeyaml.version>2.0</snakeyaml.version>

		<!-- Plugins -->
		<maven-compiler.version>3.11.0</maven-compiler.version>
		<sonar.version>3.7.0.1746</sonar.version>
		<jacoco.version>0.8.9</jacoco.version>
		
		<!-- Sonar -->
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
		<sonar.language>java</sonar.language>
		<sonar.coverage.exclusions>
			**/model/**/*.java,
			**/config/SwitcherFeatures.java
	    </sonar.coverage.exclusions>
	</properties>
	
	<profiles>
	    <profile>
	        <id>local</id>
	        <activation>
	            <activeByDefault>true</activeByDefault>
	        </activation>
	        <properties>
	            <spring.profiles.active>local</spring.profiles.active>
	        </properties>
	    </profile>
	    <profile>
	        <id>prod</id>
	        <properties>
	            <spring.profiles.active>prod</spring.profiles.active>
	        </properties>
	    </profile>
	    <profile>
            <id>coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <executions>
                            <execution>
								<id>jacoco-initialize</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>jacoco-site</id>
								<phase>package</phase>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
	    <profile>
            <id>sonar</id>
            <properties>
                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                <sonar.organization>switcherapi</sonar.organization>
                <sonar.projectKey>switcherapi_switcher-ac</sonar.projectKey>
                <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
            </properties>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonarsource.scanner.maven</groupId>
                        <artifactId>sonar-maven-plugin</artifactId>
                        <version>${sonar.version}</version>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sonar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
	</profiles>

	<dependencies>
		<!-- Spring -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		
		<!-- JWT -->
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-api</artifactId>
		    <version>${jsonwebtoken.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-impl</artifactId>
		    <version>${jsonwebtoken.version}</version>
		    <scope>runtime</scope>
		</dependency>
		
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-jackson</artifactId>
		    <version>${jsonwebtoken.version}</version>
		    <scope>runtime</scope>
   		    <exclusions>
		      <exclusion>
		         <groupId>com.fasterxml.jackson.core</groupId>
		         <artifactId>jackson-databind</artifactId>
		      </exclusion>
		   </exclusions>
		</dependency>
				
		<!-- Jersey -->
		<dependency>
		    <groupId>org.glassfish.jersey.core</groupId>
		    <artifactId>jersey-client</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-common</artifactId>
	    </dependency>
	    
	    <dependency>
			<groupId>org.glassfish.jersey.ext</groupId>
			<artifactId>jersey-entity-filtering</artifactId>
		</dependency>
			
		<dependency>
		    <groupId>org.glassfish.jersey.inject</groupId>
		    <artifactId>jersey-hk2</artifactId>
		    <exclusions>
		    	<exclusion>
		    		<artifactId>jersey-common</artifactId>
		    		<groupId>org.glassfish.jersey.core</groupId>
		    	</exclusion>
		    </exclusions>
		</dependency>
		
		<dependency>
		    <groupId>org.glassfish.jersey.media</groupId>
		    <artifactId>jersey-media-json-jackson</artifactId>
		</dependency>
		
		<!-- Utils -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>${joda-time.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.github.switcherapi</groupId>
			<artifactId>switcher-client</artifactId>
			<version>${switcher-client.version}</version>
		</dependency>
			
		<dependency>
		    <groupId>com.google.code.gson</groupId>
		    <artifactId>gson</artifactId>
		</dependency>
		
		<!-- Swagger 3 - SpringDoc OpenAPI -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc.version}</version>
		</dependency>
		
		<!-- Test -->
		<dependency>
		    <groupId>com.squareup.okhttp3</groupId>
		    <artifactId>okhttp</artifactId>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>com.squareup.okhttp3</groupId>
		    <artifactId>mockwebserver</artifactId>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
	        <groupId>org.springframework.security</groupId>
	        <artifactId>spring-security-test</artifactId>
	        <scope>test</scope>
	    </dependency>
	    
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-core</artifactId>
		    <scope>test</scope>
		</dependency>

		<dependency>
			<groupId>de.flapdoodle.embed</groupId>
			<artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
			<version>${flapdoodle.embed.mongo.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>${snakeyaml.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-expression</artifactId>
				<version>${spring-expression.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler.version}</version>
				</plugin>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>${sonar.version}</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
	
</project>
